--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
 body {
-  background: orange;
+  font: Helvetica;
+}
+h1{
+  color: #375e97;
+  font: Georgia;
+  font-size: 2em;
+  border-bottom: dotted;
+  border-width: 5px;
+  border-color: #375e97;
+}
+p{
+  color: #999999;
+  font-weight: bold;
+}
+h2{
+  font-style: italic;
+  font-size: 1.5em;
+  }
+ul{
+  background-color: #eeeeee;
+  border-width: 5px;
+  border: solid;
+  border-color: purple;
 }
