--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
 }
 h1{
   color: #375e97;
-  font: Georgia;
+  font-family: Georgia;
   font-size: 2em;
   border-bottom: dotted;
   border-width: 5px;
